fixed navbar alignment for destinations page

--- a/project_folder/public/css/styles.css
+++ b/project_folder/public/css/styles.css
@@ -643,7 +643,7 @@ box-shadow:0 10px 18px rgba(0,0,0,0.15);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1px 25px;
+    padding: 15px 20px;
     background-color: white;
     border-bottom: #f5893b 7px solid;
     /*background: linear-gradient( #f5893b,  #fda218, #f7d352);*/
